# codebase

./: Cargo.toml  README.md
.github/workflows/: ci.yml
docs/: code-base-v1-spec.md  implementation-status.md  release-checklist.md  running-code-base.md
scripts/: install.sh  uninstall.sh
src/: commands.rs  lib.rs  main.rs  storage.rs  tests.rs  tui.rs
