[package]
name = "codebase"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "cb"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
comfy-table = "7.1"
directories = "6.0"
inquire = "0.9"
rand = "0.9"
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9"

[dev-dependencies]
tempfile = "3.13"
